add mtwr and twrf dis4a, templates

--- a/teaching.html
+++ b/teaching.html
@@ -113,7 +113,7 @@
 					</div>
 				</li>
 				<li class="sg-week">
-					<a class="expand oexpand">Week 3: (<span class="emph">No Monday Lecture</span>), Cryptography (RSA), Polynomials (Secret Sharing, Error Correcting Codes), Counting</a>
+					<a class="expand">Week 3: (<span class="emph">No Monday Lecture</span>), Cryptography (RSA), Polynomials (Secret Sharing, Error Correcting Codes), Counting</a>
 					<div class="expandcontent">
 						<table class="borderedtable">
 							<tr>
@@ -144,27 +144,148 @@
 					</div>
 				</li>
 				<li class="sg-week">
-					<a class="expand">Week 4: <span class="emph red">Midterm</span>; Counting, Probability, Conditionals, Bayes</a>
+					<a class="expand oexpand">Week 4: <span class="emph red">Midterm</span>; Counting, Probability, Conditionals, Bayes</a>
 					<div class="expandcontent">
-						<p>This week has not started yet.</p>
+						<table class="borderedtable">
+							<tr>
+								<th>Dis #</th>
+								<th>MTWR 5-6p</th>
+								<th>TWRF 2-3p</th>
+								<th>Remarks</th>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis04a.pdf">Dis 4A</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1eIsldknPq9b9abgPFHk0OWPERNfqZlXP/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1FL3BYO9-ODkchrwGz4iUuEsoFmL-WU0z/view?usp=sharing">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
+<!-- 							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis04b.pdf">Dis 4B</a></td>
+								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis04c.pdf">Dis 4C</a></td>
+								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td>-</td>
+							</tr> -->
+						</table>
 					</div>
 				</li>
 				<li class="sg-week">
 					<a class="expand">Week 5: Independence, Random Variables, Variance, Covariance, Discrete Distributions</a>
 					<div class="expandcontent">
 						<p>This week has not started yet.</p>
+<!-- 						<table class="borderedtable">
+							<tr>
+								<th>Dis #</th>
+								<th>MTWR 5-6p</th>
+								<th>TWRF 2-3p</th>
+								<th>Remarks</th>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis05a.pdf">Dis 5A</a></td>
+								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis05b.pdf">Dis 5B</a></td>
+								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis05c.pdf">Dis 5C</a></td>
+								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis05d.pdf">Dis 5D</a></td>
+								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
+						</table> -->
 					</div>
 				</li>
 				<li class="sg-week">
 					<a class="expand">Week 6: Continuous Probability, Continuous Distributions, Joint Distributions</a>
 					<div class="expandcontent">
 						<p>This week has not started yet.</p>
+<!-- 						<table class="borderedtable">
+							<tr>
+								<th>Dis #</th>
+								<th>MTWR 5-6p</th>
+								<th>TWRF 2-3p</th>
+								<th>Remarks</th>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis06a.pdf">Dis 6A</a></td>
+								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis06b.pdf">Dis 6B</a></td>
+								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis06c.pdf">Dis 6C</a></td>
+								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis06d.pdf">Dis 6D</a></td>
+								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
+						</table> -->
 					</div>
 				</li>
 				<li class="sg-week">
 					<a class="expand">Week 7: Concentration Inequalities, Confidence Intervals, Markov Chains</a>
 					<div class="expandcontent">
 						<p>This week has not started yet.</p>
+<!-- 						<table class="borderedtable">
+							<tr>
+								<th>Dis #</th>
+								<th>MTWR 5-6p</th>
+								<th>TWRF 2-3p</th>
+								<th>Remarks</th>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis07a.pdf">Dis 7A</a></td>
+								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis07b.pdf">Dis 7B</a></td>
+								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis07c.pdf">Dis 7C</a></td>
+								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
+							<tr>
+								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis07d.pdf">Dis 7D</a></td>
+								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td>-</td>
+							</tr>
+						</table> -->
 					</div>
 				</li>
 				<li class="sg-week">
@@ -175,13 +296,6 @@
 				</li>
 			</ul>
 		</div>
-<!-- 		<div class="subcard left-70">
-			<h3>Fun Problems (Perhaps Pertaining to Course Content)</h3>
-			<p>Note: many of these problems are adapted from "Problems of the Day" given at the beginning of lectures by <a class="texta" href="https://people.eecs.berkeley.edu/~sinclair/">Prof. Sinclair</a> and <a class="texta" href="https://people.eecs.berkeley.edu/~yss/">Prof. Song</a> in the Fall 2019 iteration of CS 70. I enjoyed solving these problems, and hope that current students of CS 70 will find them interesting as well.</p>
-			<h4>I. Two Logic Puzzles:</h4>
-			<p>1. Bob is accused of murder. Bob's attorney never lies. The Judge states:"If Bob committed this crime, he didn't act alone." The Attorney responds:"That's not true!" <span class="emph">Question:</span> Did the attorney help Bob?</p>
-			<p>2. Is the statement "A watched child never falls asleep unless they are watched" True, False, or Undetermined?</p>
-		</div> -->
 	</div>
 </body>
 <footer>
