--- a/teaching.html
+++ b/teaching.html
@@ -159,13 +159,13 @@
 								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1FL3BYO9-ODkchrwGz4iUuEsoFmL-WU0z/view?usp=sharing">2-3p Notes</a></td>
 								<td>-</td>
 							</tr>
-<!-- 							<tr>
+							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis04b.pdf">Dis 4B</a></td>
-								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
-								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1fbNCQGOgAD3sPhoGcG4ZAUBIu1Zvwl0R/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1ziIf8v_1wbLyYQJqEyNCpvYCtdJfTUAX/view?usp=sharing">2-3p Notes</a></td>
 								<td>-</td>
 							</tr>
-							<tr>
+							<!-- <tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis04c.pdf">Dis 4C</a></td>
 								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
 								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
