--- a/teaching.html
+++ b/teaching.html
@@ -165,12 +165,12 @@
 								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1ziIf8v_1wbLyYQJqEyNCpvYCtdJfTUAX/view?usp=sharing">2-3p Notes</a></td>
 								<td>-</td>
 							</tr>
-							<!-- <tr>
+							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis04c.pdf">Dis 4C</a></td>
-								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
-								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
-								<td>-</td>
-							</tr> -->
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1KIS2KWgTTHn0s9jKf5N0Tkp6c9xNMoKP/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1aT1BKb_VmBP___hyOdjsYAS8I4tZlVpI/view?usp=sharing">2-3p Notes</a></td>
+								<td>Be sure to understand the conditional probability formula and be comfortable applying it to simplify probabilities!</td>
+							</tr>
 						</table>
 					</div>
 				</li>
