--- a/teaching.html
+++ b/teaching.html
@@ -35,9 +35,9 @@
 						<li><a class="texta" href="teaching.html" title="Self-Referential Link">This</a> webpage contains supplementary notes and resources intended to complement my discussions at {MTWR 5-6p, TWRF 2-3p}.</li>
 						<li><span class="emph">Note</span>: I currently do not have officially scheduled office hours, but feel free to make an appointment with me via email (dbi@) if you would like to discuss something.</li>
 						<li><span class="emph">Note: No lecture on Mon., Jun. 28 (and its corresponding discussions) due to the observation of Juneteenth.</span></li>
+						<li><span class="emph">Note: No lecture on Mon., Jul. 5 (and its corresponding discussions) due to the observation of Independence Day.</span></li>
 					</ul>
 				</div>
-				<li><span class="emph">Note: No lecture on Mon., Jul. 5 (and its corresponding discussions) due to the observation of Independence Day.</span></li>
 			</ul>
 		</div>
 		<div class="subcard">
@@ -144,7 +144,7 @@
 					</div>
 				</li>
 				<li class="sg-week">
-					<a class="expand oexpand">Week 4: <span class="emph red">Midterm</span>; Counting, Probability, Conditionals, Bayes</a>
+					<a class="expand">Week 4: <span class="emph red">Midterm</span>; Counting, Probability, Conditionals, Bayes</a>
 					<div class="expandcontent">
 						<table class="borderedtable">
 							<tr>
@@ -175,10 +175,9 @@
 					</div>
 				</li>
 				<li class="sg-week">
-					<a class="expand">Week 5: Independence, Random Variables, Variance, Covariance, Discrete Distributions</a>
+					<a class="expand oexpand">Week 5: Independence, Random Variables, Variance, Covariance, Discrete Distributions</a>
 					<div class="expandcontent">
-						<p>This week has not started yet.</p>
-<!-- 						<table class="borderedtable">
+						<table class="borderedtable">
 							<tr>
 								<th>Dis #</th>
 								<th>MTWR 5-6p</th>
@@ -187,17 +186,17 @@
 							</tr>
 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis05a.pdf">Dis 5A</a></td>
-								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
-								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
-								<td>-</td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1d6IBoFA5BoqW_nD2JYGFMLIqpgZa1U9I/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1APNjRTikXnNCPE82EnznBrc0_n1R9zgO/view?usp=sharing">2-3p Notes</a></td>
+								<td>A <span class="emph">correction</span> for a claim made in a previous discussion is contained in this discussion: PIE holds for all sample spaces (not necessarily uniform), while the ratio definition of probability holds for uniform sample spaces.</td>
 							</tr>
 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis05b.pdf">Dis 5B</a></td>
-								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
-								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
-								<td>-</td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1BumuvKqliQGH8UNcv_woqvhnxOEwf8lv/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta">2-3p Notes</a></td>
+								<td>Linearity of expectation is a very useful concept!</td>
 							</tr>
-							<tr>
+							<!-- <tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis05c.pdf">Dis 5C</a></td>
 								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
 								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
@@ -208,8 +207,8 @@
 								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
 								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
 								<td>-</td>
-							</tr>
-						</table> -->
+							</tr> -->
+						</table>
 					</div>
 				</li>
 				<li class="sg-week">
