--- a/teaching.html
+++ b/teaching.html
@@ -196,13 +196,13 @@
 								<td class="links"><a class="texta">2-3p Notes</a></td>
 								<td>Linearity of expectation is a very useful concept!</td>
 							</tr>
-							<!-- <tr>
+							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis05c.pdf">Dis 5C</a></td>
-								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
-								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1IMk4BCvb7r9xLCpfu0XQUU3yoL9P5ejP/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1FTDXfgHmtsXrFUQYK-0_TZ52gsLO92vN/view?usp=sharing">2-3p Notes</a></td>
 								<td>-</td>
 							</tr>
-							<tr>
+<!-- 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis05d.pdf">Dis 5D</a></td>
 								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
 								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
