--- a/teaching.html
+++ b/teaching.html
@@ -202,12 +202,12 @@
 								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1FTDXfgHmtsXrFUQYK-0_TZ52gsLO92vN/view?usp=sharing">2-3p Notes</a></td>
 								<td>-</td>
 							</tr>
-<!-- 							<tr>
+							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis05d.pdf">Dis 5D</a></td>
-								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
-								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1Z6Z2ouvOYN816nxDoP0qFp_EJcpGMoTX/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1bAs5govSq5mAx-vvmxltVRt37NO-dYW6/view?usp=sharing">2-3p Notes</a></td>
 								<td>-</td>
-							</tr> -->
+							</tr>
 						</table>
 					</div>
 				</li>
