add week 6 discussions

--- a/teaching.html
+++ b/teaching.html
@@ -175,7 +175,7 @@
 					</div>
 				</li>
 				<li class="sg-week">
-					<a class="expand oexpand">Week 5: Independence, Random Variables, Variance, Covariance, Discrete Distributions</a>
+					<a class="expand">Week 5: Independence, Random Variables, Variance, Covariance, Discrete Distributions</a>
 					<div class="expandcontent">
 						<table class="borderedtable">
 							<tr>
@@ -214,8 +214,7 @@
 				<li class="sg-week">
 					<a class="expand">Week 6: Continuous Probability, Continuous Distributions, Joint Distributions</a>
 					<div class="expandcontent">
-						<p>This week has not started yet.</p>
-<!-- 						<table class="borderedtable">
+						<table class="borderedtable">
 							<tr>
 								<th>Dis #</th>
 								<th>MTWR 5-6p</th>
@@ -224,36 +223,35 @@
 							</tr>
 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis06a.pdf">Dis 6A</a></td>
-								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
-								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1rUU7xqWeNvdWFs6CpT9RAY1l97_MV5wq/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1ejyTv6YMoS-I8Bi47XP7o5wR7oNEs3xy/view?usp=sharing">2-3p Notes</a></td>
 								<td>-</td>
 							</tr>
 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis06b.pdf">Dis 6B</a></td>
-								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
-								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/15tW_HA7B24TGLw-X7e28xfNh8hT55hCY/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1cg5VQBbqVvTW8Vp0Gf2GmbRCXePUFehg/view?usp=sharing">2-3p Notes</a></td>
 								<td>-</td>
 							</tr>
 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis06c.pdf">Dis 6C</a></td>
-								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
-								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1bty6X1iOp2pzA-KzzNOeoES-s-cNFhVe/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1cg5VQBbqVvTW8Vp0Gf2GmbRCXePUFehg/view?usp=sharing">2-3p Notes</a></td>
 								<td>-</td>
 							</tr>
 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis06d.pdf">Dis 6D</a></td>
-								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
-								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/14WXhZSQj7g8zuTA6mzLOMBcCXyFtDFHf/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1estPmYB3F4akMZcn5hwa-Qv0GuQAIcH0/view?usp=sharing">2-3p Notes</a></td>
 								<td>-</td>
 							</tr>
-						</table> -->
+						</table>
 					</div>
 				</li>
 				<li class="sg-week">
-					<a class="expand">Week 7: Concentration Inequalities, Confidence Intervals, Markov Chains</a>
+					<a class="expand oexpand">Week 7: Concentration Inequalities, Confidence Intervals, Markov Chains</a>
 					<div class="expandcontent">
-						<p>This week has not started yet.</p>
-<!-- 						<table class="borderedtable">
+						<table class="borderedtable">
 							<tr>
 								<th>Dis #</th>
 								<th>MTWR 5-6p</th>
@@ -266,7 +264,7 @@
 								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
 								<td>-</td>
 							</tr>
-							<tr>
+							<!-- <tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis07b.pdf">Dis 7B</a></td>
 								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
 								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
@@ -283,8 +281,8 @@
 								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
 								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
 								<td>-</td>
-							</tr>
-						</table> -->
+							</tr> -->
+						</table>
 					</div>
 				</li>
 				<li class="sg-week">
