--- a/teaching.html
+++ b/teaching.html
@@ -260,9 +260,9 @@
 							</tr>
 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis07a.pdf">Dis 7A</a></td>
-								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1eeiureY7XjRcO6fbrk9LWz-31oOJDRJH/view?usp=sharing">5-6p Notes</a>,<br><a class="texta" href="https://drive.google.com/file/d/1l7RIm3h6RkUxc-JF6yXrsr-6bQbQGNah/view?usp=sharing">5-6p Solutions</a></td>
 								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
-								<td>-</td>
+								<td>Due to low attendance, the 5-6p discussion was used to give a conceptual overview of concentration inequalities ("Notes"); my pre-written solutions to the worksheet are also provided ("Solutions").</td>
 							</tr>
 							<!-- <tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis07b.pdf">Dis 7B</a></td>
