add week 7 discussions

--- a/teaching.html
+++ b/teaching.html
@@ -42,7 +42,7 @@
 		</div>
 		<div class="subcard">
 			<h3>Discussion-Specific Content</h3>
-			<p><a class="texta" href="https://docs.google.com/forms/d/e/1FAIpQLSdgxSsDTZ3iA_NztqGIGRcH8x7JNWCQJlsHBtM3fEw17VhD-Q/viewform?usp=sf_link">Anonymous Feedback Form</a></p>
+			<!-- <p><a class="texta" href="https://docs.google.com/forms/d/e/1FAIpQLSdgxSsDTZ3iA_NztqGIGRcH8x7JNWCQJlsHBtM3fEw17VhD-Q/viewform?usp=sf_link">Anonymous Feedback Form</a></p> -->
 			<ul class="weeks">
 				<li class="sg-week">
 					<a class="expand">Week 1: Logic, Proofs, Sets, Cardinality</a>
@@ -261,27 +261,27 @@
 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis07a.pdf">Dis 7A</a></td>
 								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1eeiureY7XjRcO6fbrk9LWz-31oOJDRJH/view?usp=sharing">5-6p Notes</a>,<br><a class="texta" href="https://drive.google.com/file/d/1l7RIm3h6RkUxc-JF6yXrsr-6bQbQGNah/view?usp=sharing">5-6p Solutions</a></td>
-								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1VM-ivu4xR6aW_IsyT5M9DGO7XSO_WgYq/view?usp=sharing">2-3p Notes</a></td>
 								<td>Due to low attendance, the 5-6p discussion was used to give a conceptual overview of concentration inequalities ("Notes"); my pre-written solutions to the worksheet are also provided ("Solutions").</td>
 							</tr>
-							<!-- <tr>
+							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis07b.pdf">Dis 7B</a></td>
-								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
-								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1fh0OjZmc_7YPh6CKIIi2EyIE-4V4VauE/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1iKqFmFsIMSnHucLiPeiNSE0UhnlQ-Gu4/view?usp=sharing">2-3p Notes</a></td>
 								<td>-</td>
 							</tr>
 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis07c.pdf">Dis 7C</a></td>
-								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
-								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1Y3P8JwISRzxCx3llldp4C5P7z4Z78IBi/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1XSz89tf4ZOlr6MUoIt1vcHHBtmiV8zkm/view?usp=sharing">2-3p Notes</a></td>
 								<td>-</td>
 							</tr>
 							<tr>
 								<td class="links"><a class="texta" href="https://www.eecs70.org/static/discussions/dis07d.pdf">Dis 7D</a></td>
-								<td class="links"><a class="texta" href="">5-6p Notes</a></td>
-								<td class="links"><a class="texta" href="">2-3p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/12P0gdt_k6FJpZ7hjwRlGZmSVgVNGdTXb/view?usp=sharing">5-6p Notes</a></td>
+								<td class="links"><a class="texta" href="https://drive.google.com/file/d/1RW2ux86h8PSK_AeDl30x94Pzssfb9nYY/view?usp=sharing">2-3p Notes</a></td>
 								<td>-</td>
-							</tr> -->
+							</tr>
 						</table>
 					</div>
 				</li>
