--- a/teaching.html
+++ b/teaching.html
@@ -26,19 +26,35 @@
 			COMPSCI 70, Summer 2021
 		</h2>
 		<div class="subcard">
-			<h3>General(ly Boring) Information</h3>
+			<h3>General Information</h3>
 			<ul>
-				<li class="expand">Welcome to the class! &#128579;</li>
-				<div class="expandcontent">
-					<ul>
-						<li>The <a class="texta" href="https://www.eecs70.org/">Course Website</a> contains most materials. Please refer to Piazza for timely official announcements and logistical updates.</li>
-						<li><a class="texta" href="teaching.html" title="Self-Referential Link">This</a> webpage contains supplementary notes and resources intended to complement my discussions at {MTWR 5-6p, TWRF 2-3p}.</li>
-						<li><span class="emph">Note</span>: I currently do not have officially scheduled office hours, but feel free to make an appointment with me via email (dbi@) if you would like to discuss something.</li>
-						<li><span class="emph">Note: No lecture on Mon., Jun. 28 (and its corresponding discussions) due to the observation of Juneteenth.</span></li>
-						<li><span class="emph">Note: No lecture on Mon., Jul. 5 (and its corresponding discussions) due to the observation of Independence Day.</span></li>
-					</ul>
-				</div>
+				<li>Welcome to the class! &#128579;</li>
+				<li>The <a class="texta" href="https://www.eecs70.org/">Course Website</a> contains most materials. Please refer to Piazza for timely official announcements and logistical updates.</li>
+				<li><a class="texta" href="teaching.html" title="Self-Referential Link">This</a> webpage contains supplementary notes and resources intended to complement my discussions at {MTWR 5-6p, TWRF 2-3p}.</li>
+				<li><span class="emph">Note</span>: I currently do not have officially scheduled office hours, but feel free to make an appointment with me via email (dbi@) if you would like to discuss something.</li>
+				<li><span class="emph">Note: No lecture on Mon., Jun. 28 (and its corresponding discussions) due to the observation of Juneteenth.</span></li>
+				<li><span class="emph">Note: No lecture on Mon., Jul. 5 (and its corresponding discussions) due to the observation of Independence Day.</span></li>
 			</ul>
+		</div>
+		<div class="subcard">
+			<h3>Review Sessions</h3>
+			<table class="borderedtable">
+				<tr>
+					<th>Session</th>
+					<th>Slides (full)</th>
+					<th>Slides (handout)</th>
+				</tr>
+				<tr>
+					<td class="links"><a class="texta">Final Review Session: PDFs and CDFs</a></td>
+					<td class="links"><a class="texta" href="https://drive.google.com/file/d/1bV23CVtLpq1XntEOvszXtWs-UY2OCg6b/view?usp=sharing">Slides (full)</a></td>
+					<td class="links"><a class="texta" href="https://drive.google.com/file/d/1-SNXJI5ufYb1s_12B6QCsaxRWS3Ah9j8/view?usp=sharing">Slides (handout)</a></td>
+				</tr>
+				<tr>
+					<td class="links"><a class="texta">Midterm Review Session: Sets, Functions, and Cerdinality</a></td>
+					<td class="links"><a class="texta" href="https://drive.google.com/file/d/1BsbwngRi9ta6WL28KocqGkMnnRKrAJZ6/view?usp=sharing">Slides (full)</a></td>
+					<td class="links"><a class="texta" href="https://drive.google.com/file/d/1HMJlNT_Cj1BX0cOW6x85RTnoZNjyUSIL/view?usp=sharing">Slides (handout)</a></td>
+				</tr>
+			</table>
 		</div>
 		<div class="subcard">
 			<h3>Discussion-Specific Content</h3>
@@ -249,7 +265,7 @@
 					</div>
 				</li>
 				<li class="sg-week">
-					<a class="expand oexpand">Week 7: Concentration Inequalities, Confidence Intervals, Markov Chains</a>
+					<a class="expand">Week 7: Concentration Inequalities, Confidence Intervals, Markov Chains</a>
 					<div class="expandcontent">
 						<table class="borderedtable">
 							<tr>
@@ -288,7 +304,7 @@
 				<li class="sg-week">
 					<a class="expand">Week 8: Review; <span class="emph red">Final</span></a>
 					<div class="expandcontent">
-						<p>This week has not started yet.</p>
+						<p>Good luck on the final!</p>
 					</div>
 				</li>
 			</ul>
