add fa21 courses

--- a/cv.html
+++ b/cv.html
@@ -51,7 +51,7 @@
 										/
 										<a href="https://inst.eecs.berkeley.edu/~cs61c/fa20/" class="texta">C</a>
 										<br>
-										(Program Structures, Data Structures, Machine Structures)
+										(Program/Data/Machine Structures)
 									</td>
 									<td>
 										MATH
@@ -67,7 +67,7 @@
 										/
 										<a href="https://classes.berkeley.edu/content/2020-fall-physics-5b-001-lec-001" class="texta">BL</a>
 										<br>
-										(Mechanics and Relativity, Electromagnetism and Optics, Lab)
+										(Mechanics and SR/EM and Optics/Lab)
 									</td>
 								</tr>
 								<tr>
@@ -90,14 +90,14 @@
 										/
 										<a href="https://classes.berkeley.edu/content/2020-fall-chem-3bl-002-lec-002" class="texta">BL</a>
 										<br>
-										(Organic Chemistry)
+										(Organic Chemistry with Lab)
 									</td>
 								</tr>
 								<tr>
 									<td>
 										EECS <a href="https://inst.eecs.berkeley.edu/~ee16b/sp21/" class="texta">16B</a>
 										<br>
-										(Designing Information Systems and Devices II)
+										(Linear Algebra, Circuits)
 									</td>
 									<td>
 										MATH <a href="https://classes.berkeley.edu/content/2020-fall-math-h104-001-lec-001" class="texta">H104</a>
@@ -107,7 +107,7 @@
 									<td>
 										MCELLBI <a href="https://classes.berkeley.edu/content/2021-spring-mcellbi-102-001-lec-001" class="texta">102</a>
 										<br>
-										(Biochemistry and Molecular Biology)
+										(Biochemistry, Molecular Biology)
 									</td>
 								</tr>
 								<tr>
@@ -122,10 +122,16 @@
 										(Linear Algebra)
 									</td>
 									<td>
+										MCELLBI <a href="https://classes.berkeley.edu/content/2021-summer-mcellbi-104-001-lec-001" class="texta">104</a>
+										<br>
+										(Genetics, Genomics, Cell Biology)
 									</td>
 								</tr>
 								<tr>
 									<td>
+										COMPSCI <a href="https://inst.eecs.berkeley.edu/~cs170/fa21/" class="texta">170</a>
+										<br>
+										(Algorithms)
 									</td>
 									<td>
 										MATH <a href="https://classes.berkeley.edu/content/2021-spring-math-h113-001-lec-001" class="texta">H113</a>
@@ -133,10 +139,16 @@
 										(Honors Abstract Algebra)
 									</td>
 									<td>
+										MCELLBI <a href="https://classes.berkeley.edu/content/2021-fall-mcellbi-160-001-lec-001" class="texta">160</a>
+										<br>
+										(Cellular and Molecular Neurobiology)
 									</td>
 								</tr>
 								<tr>
 									<td>
+										COMPSCI <a href="https://www.eecs189.org/" class="texta">189</a>
+										<br>
+										(Machine Learning)
 									</td>
 									<td>
 										MATH <a href="https://math.berkeley.edu/~giventh/18521.html" class="texta">H185</a>
@@ -144,6 +156,23 @@
 										(Honors Complex Analysis)
 									</td>
 									<td>
+										MCELLBI <a href="https://classes.berkeley.edu/content/2021-fall-mcellbi-166-001-lec-001" class="texta">166</a>
+										<br>
+										(Biophysical Neurobiology)
+									</td>
+								</tr>
+								<tr>
+									<td>
+									</td>
+									<td>
+										MATH <a href="https://math.berkeley.edu/~giventh/18521.html" class="texta">202A</a>
+										<br>
+										(Topology and Analysis)
+									</td>
+									<td>
+										CMPBIO <a href="https://classes.berkeley.edu/content/2021-fall-cmpbio-290-001-lec-001" class="texta">290</a>
+										<br>
+										(Seminar in Computational Methods for Single-Cell Genomics and Immunology)
 									</td>
 								</tr>
 							</table>
