update for sp22

--- a/cv.html
+++ b/cv.html
@@ -165,7 +165,7 @@
 									<td>
 									</td>
 									<td>
-										MATH <a href="https://math.berkeley.edu/~giventh/18521.html" class="texta">202A</a>
+										MATH <a href="https://math.berkeley.edu/~rieffel/202AannF21.html" class="texta">202A</a>
 										<br>
 										(Topology and Analysis)
 									</td>
@@ -183,6 +183,16 @@
 
 			<h2 class="cvtitle">Research Experience</h2>
 			<div class="indent">
+				<h4 class="lralign cvitem">
+					Undergraduate Researcher,
+					Tsao Lab
+					<span>January 2022-Present</span>
+					<br>
+					Dept. of Molecular and Cell Biology, Helen Wills Neuroscience Institute, University of California, Berkeley
+				</h4>
+				<ul class="cvlist">
+					<li>Developing a real-time electrophysiology analysis plugin for the open-source platform Open Ephys.</li>
+				</ul>
 				<h4 class="lralign cvitem">
 					Undergraduate Researcher,
 					<a href="https://people.eecs.berkeley.edu/~yss/" class=texta>
@@ -221,17 +231,28 @@
 					<span>Summer 2020</span>
 				</h4>
 				<ul class="cvlist">
-					<li>Course staff for <a href="https://www.eecs70.org/" class="texta">COMPSCI 70</a>.</li>
+					<li>Course staff for <a href="https://www.su21.eecs70.org/" class="texta">COMPSCI 70</a>.</li>
+					<li>Taught discussion sections, led review sessions, answered questions on Piazza, graded exams, and held individual check-in meetings with students.</li>
+					<li>Received median 5/5 responses and above department average ratings on all questions in course evaluation.</li>
 				</ul>
 				<h4 class="lralign cvitem">
 					Reader
-					<span>Spring 2020</span>
+					<span>Spring 2022, Spring 2021</span>
 					<br>
 					Dept. of EECS, University of California, Berkeley
 				</h4>
 				<ul class="cvlist">
-					<li>Course staff for <a href="https://www.sp21.eecs70.org/" class="texta">COMPSCI 70.</a></li>
+					<li>Course staff for <a href="https://cs170.org/" class="texta">COMPSCI 170</a> (Sp 22), <a href="https://www.eecs189.org/" class="texta">COMPSCI 189</a> (Sp 22), and <a href="https://www.sp21.eecs70.org/" class="texta">COMPSCI 70</a> (Sp 21).</li>
 					<li>Graded homeworks and exams, held office hours, and answered questions on Piazza.</li>
+				</ul>
+				<h4 class="lralign cvitem">
+					Reader
+					<span>Spring 2022</span>
+					<br>
+					Dept. of Mathematics, University of California, Berkeley
+				</h4>
+				<ul class="cvlist">
+					<li>Reader for <a href="https://classes.berkeley.edu/content/2022-spring-math-185-001-lec-001" class="texta">MATH 185</a>.</li>
 				</ul>
 			</div>
 
@@ -240,7 +261,7 @@
 				<h4 class="lralign cvitem">
 					Dean's List,
 					College of Letters and Science, University of California, Berkeley
-					<span>Spring 2021, Fall 2020, Fall 2019</span>
+					<span>Fall 2021, Spring 2021, Fall 2020, Fall 2019</span>
 				</h4>
 				<ul class="cvlist">
 					<li><a href="https://lsadvising.berkeley.edu/policies/deans-listhonors" class="texta">Description</a> from the College of Letters and Science, UC Berkeley.</li>
@@ -259,6 +280,6 @@
 </body>
 
 <footer>
-	<p>Dasheng Bi, 2021</p>
+	<p>Dasheng Bi, 2022</p>
 </footer>
 </html>
