--- a/cv.html
+++ b/cv.html
@@ -45,134 +45,162 @@
 								<tr>
 									<td>
 										COMPSCI 61
-										<a href="https://inst.eecs.berkeley.edu/~cs61a/su20/" class="texta">A</a>
+										<a href="https://inst.eecs.berkeley.edu/~cs61a/su20/" class="texta b">A</a>
 										/
-										<a href="https://inst.eecs.berkeley.edu/~cs61b/sp20/" class="texta">B</a>
+										<a href="https://inst.eecs.berkeley.edu/~cs61b/sp20/" class="texta b">B</a>
 										/
-										<a href="https://inst.eecs.berkeley.edu/~cs61c/fa20/" class="texta">C</a>
+										<a href="https://inst.eecs.berkeley.edu/~cs61c/fa20/" class="texta b">C</a>
 										<br>
 										(Program/Data/Machine Structures)
 									</td>
 									<td>
 										MATH
-										<a href="https://classes.berkeley.edu/content/2020-spring-math-h53-001-lec-001" class="texta">H53</a>
+										<a href="https://classes.berkeley.edu/content/2020-spring-math-h53-001-lec-001" class="texta b">H53</a>
 										<br>
 										(Honors Multivariable Calculus)
 									</td>
 									<td>
 										PHYSICS 5
-										<a href="https://classes.berkeley.edu/content/2020-spring-physics-5a-001-lec-001" class="texta">A</a>
+										<a href="https://classes.berkeley.edu/content/2020-spring-physics-5a-001-lec-001" class="texta b">A</a>
 										/
-										<a href="https://classes.berkeley.edu/content/2020-fall-physics-5b-001-lec-001" class="texta">B</a>
+										<a href="https://classes.berkeley.edu/content/2020-fall-physics-5b-001-lec-001" class="texta b">B</a>
 										/
-										<a href="https://classes.berkeley.edu/content/2020-fall-physics-5b-001-lec-001" class="texta">BL</a>
+										<a href="https://classes.berkeley.edu/content/2020-fall-physics-5b-001-lec-001" class="texta b">BL</a>
 										<br>
 										(Mechanics and SR/EM and Optics/Lab)
 									</td>
 								</tr>
 								<tr>
 									<td>
-										COMPSCI <a href="https://inst.eecs.berkeley.edu/~cs70/su20/" class="texta">70</a>
+										COMPSCI <a href="https://inst.eecs.berkeley.edu/~cs70/su20/" class="texta b">70</a>
 										<br>
 										(Discrete Math and Probability Theory)
 									</td>
 									<td>
-										MATH <a href="https://math.berkeley.edu/~nikhil/courses/54.s20/" class="texta">54</a>
+										MATH <a href="https://math.berkeley.edu/~nikhil/courses/54.s20/" class="texta b">54</a>
 										<br>
 										(Linear Algebra and Differential Equations)
 									</td>
 									<td>
-										CHEM 3<a href="https://classes.berkeley.edu/content/2020-spring-chem-3a-001-lec-001" class="texta">A</a>
+										CHEM 3 <a href="https://classes.berkeley.edu/content/2020-spring-chem-3a-001-lec-001" class="texta b">A</a>
 										/
-										<a href="https://classes.berkeley.edu/content/2020-summer-chem-3b-001-lec-001" class="texta">B</a>
+										<a href="https://classes.berkeley.edu/content/2020-summer-chem-3b-001-lec-001" class="texta b">B</a>
 										/
-										<a href="https://classes.berkeley.edu/content/2020-spring-chem-3al-001-lec-001" class="texta">AL</a>
+										<a href="https://classes.berkeley.edu/content/2020-spring-chem-3al-001-lec-001" class="texta b">AL</a>
 										/
-										<a href="https://classes.berkeley.edu/content/2020-fall-chem-3bl-002-lec-002" class="texta">BL</a>
+										<a href="https://classes.berkeley.edu/content/2020-fall-chem-3bl-002-lec-002" class="texta b">BL</a>
 										<br>
 										(Organic Chemistry with Lab)
 									</td>
 								</tr>
 								<tr>
 									<td>
-										EECS <a href="https://inst.eecs.berkeley.edu/~ee16b/sp21/" class="texta">16B</a>
+										EECS <a href="https://inst.eecs.berkeley.edu/~ee16b/sp21/" class="texta b">16B</a>
 										<br>
 										(Linear Algebra, Circuits)
 									</td>
 									<td>
-										MATH <a href="https://classes.berkeley.edu/content/2020-fall-math-h104-001-lec-001" class="texta">H104</a>
+										MATH <a href="https://classes.berkeley.edu/content/2020-fall-math-h104-001-lec-001" class="texta b">H104</a>
 										<br>
 										(Honors Real Analysis)
 									</td>
 									<td>
-										MCELLBI <a href="https://classes.berkeley.edu/content/2021-spring-mcellbi-102-001-lec-001" class="texta">102</a>
+										MCELLBI <a href="https://classes.berkeley.edu/content/2021-spring-mcellbi-102-001-lec-001" class="texta b">102</a>
 										<br>
 										(Biochemistry, Molecular Biology)
 									</td>
 								</tr>
 								<tr>
 									<td>
-										COMPSCI <a href="https://inst.eecs.berkeley.edu/~cs188/sp21/" class="texta">188</a>
+										COMPSCI <a href="https://inst.eecs.berkeley.edu/~cs188/sp21/" class="texta b">188</a>
 										<br>
 										(Artificial Intelligence)
 									</td>
 									<td>
-										MATH <a href="https://classes.berkeley.edu/content/2020-fall-math-110-001-lec-001" class="texta">110</a>
+										MATH <a href="https://classes.berkeley.edu/content/2020-fall-math-110-001-lec-001" class="texta b">110</a>
 										<br>
 										(Linear Algebra)
 									</td>
 									<td>
-										MCELLBI <a href="https://classes.berkeley.edu/content/2021-summer-mcellbi-104-001-lec-001" class="texta">104</a>
+										MCELLBI <a href="https://classes.berkeley.edu/content/2021-summer-mcellbi-104-001-lec-001" class="texta b">104</a>
 										<br>
 										(Genetics, Genomics, Cell Biology)
 									</td>
 								</tr>
 								<tr>
 									<td>
-										COMPSCI <a href="https://inst.eecs.berkeley.edu/~cs170/fa21/" class="texta">170</a>
+										COMPSCI <a href="https://inst.eecs.berkeley.edu/~cs170/fa21/" class="texta b">170</a>
 										<br>
 										(Algorithms)
 									</td>
 									<td>
-										MATH <a href="https://classes.berkeley.edu/content/2021-spring-math-h113-001-lec-001" class="texta">H113</a>
+										MATH <a href="https://classes.berkeley.edu/content/2021-spring-math-h113-001-lec-001" class="texta b">H113</a>
 										<br>
 										(Honors Abstract Algebra)
 									</td>
 									<td>
-										MCELLBI <a href="https://classes.berkeley.edu/content/2021-fall-mcellbi-160-001-lec-001" class="texta">160</a>
+										MCELLBI <a href="https://classes.berkeley.edu/content/2021-fall-mcellbi-160-001-lec-001" class="texta b">160</a>
 										<br>
 										(Cellular and Molecular Neurobiology)
 									</td>
 								</tr>
 								<tr>
 									<td>
-										COMPSCI <a href="https://www.eecs189.org/" class="texta">189</a>
+										COMPSCI <a href="https://www.eecs189.org/" class="texta b">189</a>
 										<br>
 										(Machine Learning)
 									</td>
 									<td>
-										MATH <a href="https://math.berkeley.edu/~giventh/18521.html" class="texta">H185</a>
+										MATH <a href="https://math.berkeley.edu/~giventh/18521.html" class="texta b">H185</a>
 										<br>
 										(Honors Complex Analysis)
 									</td>
 									<td>
-										MCELLBI <a href="https://classes.berkeley.edu/content/2021-fall-mcellbi-166-001-lec-001" class="texta">166</a>
+										MCELLBI <a href="https://classes.berkeley.edu/content/2021-fall-mcellbi-166-001-lec-001" class="texta b">166</a>
 										<br>
 										(Biophysical Neurobiology)
 									</td>
 								</tr>
 								<tr>
 									<td>
+										COMPSCI <a href="https://classes.berkeley.edu/content/2022-spring-compsci-172-001-lec-001" class="texta b">172</a>
+										<br>
+										(Computability and Complexity)
 									</td>
 									<td>
-										MATH <a href="https://math.berkeley.edu/~rieffel/202AannF21.html" class="texta">202A</a>
+										MATH <a href="https://math.berkeley.edu/~rieffel/202AannF21.html" class="texta b">202A</a>
 										<br>
 										(Topology and Analysis)
 									</td>
 									<td>
-										CMPBIO <a href="https://classes.berkeley.edu/content/2021-fall-cmpbio-290-001-lec-001" class="texta">290</a>
+										CMPBIO <a href="https://classes.berkeley.edu/content/2021-fall-cmpbio-290-001-lec-001" class="texta b">290</a>
 										<br>
 										(Seminar in Computational Methods for Single-Cell Genomics and Immunology)
+									</td>
+								</tr>
+								<tr>
+									<td>
+										COMPSCI <a href="https://classes.berkeley.edu/content/2022-spring-compsci-174-001-lec-001" class="texta b">172</a>
+										<br>
+										(Randomized Algorithms)
+									</td>
+									<td>
+									</td>
+									<td>
+										MCELLBI 161 <a href="https://classes.berkeley.edu/content/2022-spring-mcellbi-161-001-lec-001" class="texta b">290</a>
+										<br>
+										(Systems Neuroscience)
+									</td>
+								</tr>
+								<tr>
+									<td>
+										COMPSCI <a href="https://classes.berkeley.edu/content/2022-spring-compsci-194-198-lec-198" class="texta b">194-198</a>
+										<br>
+										(Network Models and Algorithms)
+									</td>
+									<td>
+									</td>
+									<td>
 									</td>
 								</tr>
 							</table>
@@ -184,11 +212,20 @@
 			<h2 class="cvtitle">Research Experience</h2>
 			<div class="indent">
 				<h4 class="lralign cvitem">
+					Undergraduate Senior Intern, Machine Learning Initiative
+					<span>Summer 2022</span>
+					<br>
+					<a href="https://www.deshawresearch.com/" class=texta>D. E. Shaw Research</a>
+				</h4>
+				<ul class="cvlist">
+					<li>Developed machine learning workflows for drug discovery.</li>
+				</ul>
+				<h4 class="lralign cvitem">
 					Undergraduate Researcher,
 					Tsao Lab
 					<span>January 2022-Present</span>
 					<br>
-					Dept. of Molecular and Cell Biology, Helen Wills Neuroscience Institute, University of California, Berkeley
+					<a href="https://mcb.berkeley.edu/" class=texta>Dept. of Molecular and Cell Biology</a>, <a href="https://live-helen-wills-neuroscience-institute.pantheon.berkeley.edu/" class=texta>Helen Wills Neuroscience Institute</a>, <a href="https://www.berkeley.edu/" class=texta>University of California, Berkeley</a>
 				</h4>
 				<ul class="cvlist">
 					<li>Developing a real-time electrophysiology analysis plugin for the open-source platform Open Ephys.</li>
@@ -200,7 +237,7 @@
 					</a>
 					<span>August 2020-Present</span>
 					<br>
-					Depts. of EECS and Statistics, University of California, Berkeley
+					Depts. of <a href="https://eecs.berkeley.edu/" class=texta>EECS</a> and <a href="https://statistics.berkeley.edu/" class=texta>Statistics</a>, <a href="https://www.berkeley.edu/" class=texta>University of California, Berkeley</a>
 				</h4>
 				<ul class="cvlist">
 					<li>Developed a pipeline for scalable genome-level inference of recombination rate from sequencing data based on tree inference methods and statistical learning.</li>
@@ -211,9 +248,9 @@
 					<a href="https://fenglaboratory.org/" class=texta>
 						Feng Lab
 					</a>
-					<span>June 2018-August 2018</span>
+					<span>Summer 2018</span>
 					<br>
-					Dept. of Brain and Cognitive Sciences, MIT
+					<a href="https://bcs.mit.edu/" class=texta>Dept. of Brain and Cognitive Sciences</a>, <a href="https://web.mit.edu/" class=texta>MIT</a>
 				</h4>
 				<ul class="cvlist">
 					<li>Analyzed electroencephalography (EEG) signals in mice to investigate the function of the thalamic reticular nucleus (TRN) and its role in regulating sleep.</li>
@@ -222,27 +259,27 @@
 				</ul>
 			</div>
 
-			<h2 class="cvtitle">Academic Positions</h2>
+			<h2 class="cvtitle">Teaching Positions</h2>
 			<div class="indent">
 				<h4 class="lralign cvitem">
 					Undergraduate Graduate Student Instructor (uGSI)
 					<br>
 					Dept. of EECS, University of California, Berkeley
-					<span>Summer 2020</span>
+					<span>Fall 2022, Summer 2020</span>
 				</h4>
 				<ul class="cvlist">
-					<li>Course staff for <a href="https://www.su21.eecs70.org/" class="texta">COMPSCI 70</a>.</li>
+					<li>Course staff for <a href="https://www.su21.eecs70.org/" class="texta">COMPSCI 70</a> (Su 20), <a href="https://cs170.org/" class=texta>COMPSCI 170</a> (Fa 22).</li>
 					<li>Taught discussion sections, led review sessions, answered questions on Piazza, graded exams, and held individual check-in meetings with students.</li>
-					<li>Received median 5/5 responses and above department average ratings on all questions in course evaluation.</li>
+					<li>Received median 5/5 responses and above department average ratings on all questions in first-time course evaluation.</li>
 				</ul>
 				<h4 class="lralign cvitem">
 					Reader
-					<span>Spring 2022, Spring 2021</span>
+					<span>Fall 2022, Spring 2022, Spring 2021</span>
 					<br>
 					Dept. of EECS, University of California, Berkeley
 				</h4>
 				<ul class="cvlist">
-					<li>Course staff for <a href="https://cs170.org/" class="texta">COMPSCI 170</a> (Sp 22), <a href="https://www.eecs189.org/" class="texta">COMPSCI 189</a> (Sp 22), and <a href="https://www.sp21.eecs70.org/" class="texta">COMPSCI 70</a> (Sp 21).</li>
+					<li>Course staff for <a href="https://classes.berkeley.edu/content/2022-fall-compsci-172-001-lec-001" class=texta>COMPSCI 172</a> (Fa 22), <a href="https://classes.berkeley.edu/content/2022-fall-compsci-c176-001-lec-001" class=texta>COMPSCI C176</a> (Fa 22), <a href="https://cs170.org/" class="texta">COMPSCI 170</a> (Sp 22), <a href="https://www.eecs189.org/" class="texta">COMPSCI 189</a> (Sp 22), and <a href="https://www.sp21.eecs70.org/" class="texta">COMPSCI 70</a> (Sp 21).</li>
 					<li>Graded homeworks and exams, held office hours, and answered questions on Piazza.</li>
 				</ul>
 				<h4 class="lralign cvitem">
@@ -256,7 +293,7 @@
 				</ul>
 			</div>
 
-			<h2 class="cvtitle">Awards and Honors</h2>
+			<h2 class="cvtitle">Selected Awards and Honors</h2>
 			<div class="indent">
 				<h4 class="lralign cvitem">
 					Dean's List,
