--- a/cv.html
+++ b/cv.html
@@ -187,7 +187,7 @@
 									<td>
 									</td>
 									<td>
-										MCELLBI 161 <a href="https://classes.berkeley.edu/content/2022-spring-mcellbi-161-001-lec-001" class="texta b">290</a>
+										MCELLBI <a href="https://classes.berkeley.edu/content/2022-spring-mcellbi-161-001-lec-001" class="texta b">161</a>
 										<br>
 										(Systems Neuroscience)
 									</td>
