--- a/index.html
+++ b/index.html
@@ -18,9 +18,14 @@
 		</ul>
 	</div>
 	<div class="card">
-		<h2>Undergrad at <a href="https://www.berkeley.edu/" class=texta>UC Berkeley</a> majoring in <a href="https://eecs.berkeley.edu/" class="texta">CS</a>, <a href="https://math.berkeley.edu/" class="texta">Math</a>, and <a href="https://mcb.berkeley.edu/" class="texta">MCB</a>.</h2>
-		<h3>Research interests are computational and theoretical neuroscience. <a href="https://scholar.google.com/citations?user=ibf1Y7UAAAAJ&hl=en" class="texta">Google Scholar</a>.</h3>
-		<a class="expand">Some Photographs of Campus</a>
+		<h1>Hi, I'm Dasheng,</h1>
+		<h2 style="text-indent: 5%;">a first-year graduate student at <a href="https://www.berkeley.edu/" class=texta>UC Berkeley</a>,</h2>
+		<h3 style="text-indent: 10%;">co-advised by <a href="https://tsaolab.berkeley.edu/" class="texta">Doris Tsao</a>, <a href="http://www.rctn.org/bruno/" class="texta">Bruno Olshausen</a>, and <a href="https://people.eecs.berkeley.edu/~malik/" class="texta">Jitendra Malik</a>.</h3>
+		<h1>My research interests are</h1>
+		<h2 style="text-indent: 5%;">Computational and theoretical neuroscience. <a href="https://scholar.google.com/citations?user=ibf1Y7UAAAAJ&hl=en" class="texta">Google Scholar</a>.</h2>
+		<br>
+		<h3>I was previously an undergrad at UC Berkeley, majoring in <a href="https://eecs.berkeley.edu/" class="texta">CS</a>, <a href="https://math.berkeley.edu/" class="texta">Math</a>, and <a href="https://mcb.berkeley.edu/" class="texta">MCB</a>.</h3>
+		<!-- <a class="expand">Some Photographs of Campus</a>
 		<div class="expandcontent">
 			<div class="subcard">
 				<table class="photographs">
@@ -53,12 +58,13 @@
 					</tr>
 				</table>
 			</div>
-		</div>
+		</div> -->
+		<br>
 		<p>Still under development.</p>
 	</div>
 </body>
 
 <footer>
-	<p>Dasheng Bi, 2022</p>
+	<p>Dasheng Bi, <span id="currentYear"></span></p>
 </footer>
 </html>
