--- a/cv.html
+++ b/cv.html
@@ -26,14 +26,16 @@
 			<div class="indent">
 				<h4 class="lralign cvitem">
 					B.A., University of California, Berkeley
-					<span>August 2019-Expected May 2023</span>
+					<span>August 2019-May 2023</span>
 				</h4>
 				<ul class="cvlist">
 					<li>Computer Science, Mathematics, Molecular and Cell Biology-Neurobiology</li>
-					<li>GPA: 4.000, Honors to Date</li>
+					<li>GPA: 4.000; Highest Distinction; Departmental Honors; Phi Beta Kappa</li>
+					<li>CS Honors Thesis: "Benchmarking Sequence-Based Methods for Predicting Translation Initiation"</li>
+					<li>MCB Honors Thesis: "Face and Object Representations in Inferotemporal Cortex"</li>
 					<li id="courses_taken">
 						<a class="expand">
-							Selected List of Taken Courses
+							Selected List of Courses Taken
 						</a>
 						<div class="expandcontent">
 							<table>
@@ -112,9 +114,9 @@
 								</tr>
 								<tr>
 									<td>
-										COMPSCI <a href="https://inst.eecs.berkeley.edu/~cs188/sp21/" class="texta b">188</a>
+										COMPSCI <a href="https://inst.eecs.berkeley.edu/~cs170/fa21/" class="texta b">170</a>
 										<br>
-										(Artificial Intelligence)
+										(Algorithms)
 									</td>
 									<td>
 										MATH <a href="https://classes.berkeley.edu/content/2020-fall-math-110-001-lec-001" class="texta b">110</a>
@@ -129,9 +131,9 @@
 								</tr>
 								<tr>
 									<td>
-										COMPSCI <a href="https://inst.eecs.berkeley.edu/~cs170/fa21/" class="texta b">170</a>
+										COMPSCI <a href="https://classes.berkeley.edu/content/2022-spring-compsci-172-001-lec-001" class="texta b">172</a>
 										<br>
-										(Algorithms)
+										(Computability and Complexity)
 									</td>
 									<td>
 										MATH <a href="https://classes.berkeley.edu/content/2021-spring-math-h113-001-lec-001" class="texta b">H113</a>
@@ -140,51 +142,22 @@
 									</td>
 									<td>
 										MCELLBI <a href="https://classes.berkeley.edu/content/2021-fall-mcellbi-160-001-lec-001" class="texta b">160</a>
+										/
+										<a href="https://classes.berkeley.edu/content/2022-fall-mcellbi-160l-001-lec-001" class="texta b">L</a>
 										<br>
-										(Cellular and Molecular Neurobiology)
+										(Cellular and Molecular Neurobiology with Lab)
 									</td>
 								</tr>
 								<tr>
 									<td>
-										COMPSCI <a href="https://www.eecs189.org/" class="texta b">189</a>
+										COMPSCI <a href="https://classes.berkeley.edu/content/2022-spring-compsci-174-001-lec-001" class="texta b">174</a>
 										<br>
-										(Machine Learning)
+										(Randomized Algorithms)
 									</td>
 									<td>
 										MATH <a href="https://math.berkeley.edu/~giventh/18521.html" class="texta b">H185</a>
 										<br>
 										(Honors Complex Analysis)
-									</td>
-									<td>
-										MCELLBI <a href="https://classes.berkeley.edu/content/2021-fall-mcellbi-166-001-lec-001" class="texta b">166</a>
-										<br>
-										(Biophysical Neurobiology)
-									</td>
-								</tr>
-								<tr>
-									<td>
-										COMPSCI <a href="https://classes.berkeley.edu/content/2022-spring-compsci-172-001-lec-001" class="texta b">172</a>
-										<br>
-										(Computability and Complexity)
-									</td>
-									<td>
-										MATH <a href="https://math.berkeley.edu/~rieffel/202AannF21.html" class="texta b">202A</a>
-										<br>
-										(Topology and Analysis)
-									</td>
-									<td>
-										CMPBIO <a href="https://classes.berkeley.edu/content/2021-fall-cmpbio-290-001-lec-001" class="texta b">290</a>
-										<br>
-										(Seminar in Computational Methods for Single-Cell Genomics and Immunology)
-									</td>
-								</tr>
-								<tr>
-									<td>
-										COMPSCI <a href="https://classes.berkeley.edu/content/2022-spring-compsci-174-001-lec-001" class="texta b">172</a>
-										<br>
-										(Randomized Algorithms)
-									</td>
-									<td>
 									</td>
 									<td>
 										MCELLBI <a href="https://classes.berkeley.edu/content/2022-spring-mcellbi-161-001-lec-001" class="texta b">161</a>
@@ -194,11 +167,65 @@
 								</tr>
 								<tr>
 									<td>
+										COMPSCI <a href="https://inst.eecs.berkeley.edu/~cs182/fa22/" class="texta b">182</a>
+										<br>
+										(Neural Networks)
+									</td>
+									<td>
+										MATH <a href="https://classes.berkeley.edu/content/2022-fall-math-128a-001-lec-001" class="texta b">128A</a>
+										<br>
+										(Numerical Analysis)
+									</td>
+									<td>
+										MCELLBI <a href="https://classes.berkeley.edu/content/2021-fall-mcellbi-166-001-lec-001" class="texta b">166</a>
+										<br>
+										(Biophysical Neurobiology)
+									</td>
+								</tr>
+								<tr>
+									<td>
+										COMPSCI <a href="https://inst.eecs.berkeley.edu/~cs188/sp21/" class="texta b">188</a>
+										<br>
+										(Artificial Intelligence)
+									</td>
+									<td>
+										MATH <a href="https://classes.berkeley.edu/content/2022-fall-math-141-001-lec-001" class="texta b">141</a>
+										<br>
+										(Differential Topology)
+									</td>
+									<td>
+										VISSCI <a href="https://redwood.berkeley.edu/courses/vs265/" class="texta b">265</a>
+										<br>
+										(Neural Computation)								
+									</td>
+								</tr>
+								<tr>
+									<td>
+										COMPSCI <a href="https://www.eecs189.org/" class="texta b">189</a>
+										<br>
+										(Machine Learning)
+									</td>
+									<td>
+										MATH <a href="https://math.berkeley.edu/~rieffel/202AannF21.html" class="texta b">202A</a>
+										<br>
+										(Topology and Analysis)
+									</td>
+									<td>
+										CMPBIO <a href="https://classes.berkeley.edu/content/2021-fall-cmpbio-290-001-lec-001" class="texta b">290</a>
+										<br>
+										(Algorithms for Single-Cell Genomics)
+									</td>
+								</tr>
+								<tr>
+									<td>
 										COMPSCI <a href="https://classes.berkeley.edu/content/2022-spring-compsci-194-198-lec-198" class="texta b">194-198</a>
 										<br>
 										(Network Models and Algorithms)
 									</td>
 									<td>
+										MATH <a href="https://classes.berkeley.edu/content/2023-spring-math-205-001-lec-001" class="texta b">205</a>
+										<br>
+										(Theory of Functions of a Complex Variable)
 									</td>
 									<td>
 									</td>
@@ -208,7 +235,7 @@
 					</li>
 				</ul>
 			</div>
-
+			
 			<h2 class="cvtitle">Research Experience</h2>
 			<div class="indent">
 				<h4 class="lralign cvitem">
@@ -222,13 +249,15 @@
 				</ul>
 				<h4 class="lralign cvitem">
 					Undergraduate Researcher,
-					Tsao Lab
+					<a href="https://tsaolab.berkeley.edu/" class=texta>
+						Tsao Lab
+					</a>
 					<span>January 2022-Present</span>
 					<br>
-					<a href="https://mcb.berkeley.edu/" class=texta>Dept. of Molecular and Cell Biology</a>, <a href="https://live-helen-wills-neuroscience-institute.pantheon.berkeley.edu/" class=texta>Helen Wills Neuroscience Institute</a>, <a href="https://www.berkeley.edu/" class=texta>University of California, Berkeley</a>
+					<a href="https://mcb.berkeley.edu/" class=texta>Dept. of Molecular and Cell Biology</a>, <a href="https://neuroscience.berkeley.edu/" class=texta>Helen Wills Neuroscience Institute</a>, <a href="https://www.berkeley.edu/" class=texta>University of California, Berkeley</a>
 				</h4>
 				<ul class="cvlist">
-					<li>Developing a real-time electrophysiology analysis plugin for the open-source platform Open Ephys.</li>
+					<li>Developed a real-time electrophysiology analysis plugin for the open-source platform Open Ephys.</li>
 				</ul>
 				<h4 class="lralign cvitem">
 					Undergraduate Researcher,
@@ -241,7 +270,8 @@
 				</h4>
 				<ul class="cvlist">
 					<li>Developed a pipeline for scalable genome-level inference of recombination rate from sequencing data based on tree inference methods and statistical learning.</li>
-					<li>Investigating the phenomenon of codon usage bias in the genome and its differential distribution within and across genes and species.</li>
+					<li>Investigated the phenomenon of codon usage bias in the genome and its differential distribution within and across genes and species.</li>
+					<li>Developed and benchmarked machine learning methods for translation initiation prediction.</li>
 				</ul>
 				<h4 class="lralign cvitem">
 					High School Research Intern,
@@ -258,19 +288,19 @@
 					<li>TRN Subnetworks <a href="https://doi.org/10.1038/s41586-020-2504-5" class="texta">Paper</a> in <em>Nature</em>.</li>
 				</ul>
 			</div>
-
+			
 			<h2 class="cvtitle">Teaching Positions</h2>
 			<div class="indent">
 				<h4 class="lralign cvitem">
 					Undergraduate Graduate Student Instructor (uGSI)
 					<br>
 					Dept. of EECS, University of California, Berkeley
-					<span>Fall 2022, Summer 2020</span>
+					<span>Spring 2023, Fall 2022, Summer 2020</span>
 				</h4>
 				<ul class="cvlist">
-					<li>Course staff for <a href="https://www.su21.eecs70.org/" class="texta">COMPSCI 70</a> (Su 20), <a href="https://cs170.org/" class=texta>COMPSCI 170</a> (Fa 22).</li>
+					<li>Course staff for <a href="https://www.su21.eecs70.org/" class="texta">COMPSCI 70</a> (Su 20), <a href="https://cs170.org/" class=texta>COMPSCI 170</a> (Fa 22), and <a href="https://people.eecs.berkeley.edu/~jrs/189/" class=texta>COMPSCI 189</a> (Sp 23).</li>
 					<li>Taught discussion sections, led review sessions, answered questions on Piazza, graded exams, and held individual check-in meetings with students.</li>
-					<li>Received median 5/5 responses and above department average ratings on all questions in first-time course evaluation.</li>
+					<li>Received median 5/5 responses and above department average ratings on every question in Su 20 and Sp 23 course evaluations.</li>
 				</ul>
 				<h4 class="lralign cvitem">
 					Reader
@@ -292,23 +322,47 @@
 					<li>Reader for <a href="https://classes.berkeley.edu/content/2022-spring-math-185-001-lec-001" class="texta">MATH 185</a>.</li>
 				</ul>
 			</div>
-
+			
 			<h2 class="cvtitle">Selected Awards and Honors</h2>
 			<div class="indent">
 				<h4 class="lralign cvitem">
-					Dean's List,
-					College of Letters and Science, University of California, Berkeley
-					<span>Fall 2021, Spring 2021, Fall 2020, Fall 2019</span>
+					I.L. Chaikoff Memorial Award
+					<span>May 2023</span>
 				</h4>
 				<ul class="cvlist">
-					<li><a href="https://lsadvising.berkeley.edu/policies/deans-listhonors" class="texta">Description</a> from the College of Letters and Science, UC Berkeley.</li>
+					<li>Department of Molecular and Cell Biology, University of California, Berkeley</li>
+					<li><a href="https://mcb.berkeley.edu/undergrad/major/honors-program/awards" class="texta">Description</a> from the MCB Department.</li>
 				</ul>
 				<h4 class="lralign cvitem">
-					Scholar,
-					Regeneron Science Talent Search (STS)
+					CS Major Citation
+					<span>May 2023</span>
+				</h4>
+				<ul class="cvlist">
+					<li>Department of Electrical Engineering and Computer Sciences, University of California, Berkeley</li>
+					<li><a href="https://www2.eecs.berkeley.edu/Students/Awards/114/" class="texta">Description</a> from the EECS Department.</li>
+				</ul>
+				<h4 class="lralign cvitem">
+					NSF Graduate Research Fellowship
+					<span>March 2023</span>
+				</h4>
+				<ul class="cvlist">
+					<li>National Science Foundation</li>
+					<li><a href="https://www.nsfgrfp.org/" class="texta">Description</a> from the Program.</li>
+				</ul>
+				<h4 class="lralign cvitem">
+					Dean's Honors List
+					<span>Fall 2022/2021/2020/2019, Spring 2022/2021</span>
+				</h4>
+				<ul class="cvlist">
+					<li>College of Letters and Science, University of California, Berkeley</li>
+					<li><a href="https://lsadvising.berkeley.edu/policies/deans-listhonors" class="texta">Description</a> from the College of Letters and Science.</li>
+				</ul>
+				<h4 class="lralign cvitem">
+					Regeneron Science Talent Search (STS) Scholar
 					<span>January 2019</span>
 				</h4>
 				<ul class="cvlist">
+					<li>Society for Science & the Public and Regeneron Pharmaceuticals</li>
 					<li><a href="https://www.societyforscience.org/blog/300-u-s-high-school-students-named-as-scholars-in-regeneron-science-talent-search-2019/" class="texta">Press release</a> from the Society for Science & the Public.</li>
 				</ul>
 			</div>
@@ -317,6 +371,6 @@
 </body>
 
 <footer>
-	<p>Dasheng Bi, 2022</p>
+	<p>Dasheng Bi, <span id="currentYear"></span></p>
 </footer>
 </html>
