--- a/cv.html
+++ b/cv.html
@@ -21,11 +21,12 @@
 		<center>
 			<h1>Dasheng Bi</h1>
 		</center>
-		<div class="subcard">
+		<!-- <div class="subcard"> -->
+			<div class="subcard">
 			<h2 class="cvtitle">Education</h2>
 			<div class="indent">
 				<h4 class="lralign cvitem">
-					B.A., University of California, Berkeley
+					B.A., <a href="https://www.berkeley.edu/" class="texta">University of California, Berkeley</a>
 					<span>August 2019-May 2023</span>
 				</h4>
 				<ul class="cvlist">
@@ -235,18 +236,11 @@
 					</li>
 				</ul>
 			</div>
+			</div>
 			
+			<div class="subcard">
 			<h2 class="cvtitle">Research Experience</h2>
 			<div class="indent">
-				<h4 class="lralign cvitem">
-					Undergraduate Senior Intern, Machine Learning Initiative
-					<span>Summer 2022</span>
-					<br>
-					<a href="https://www.deshawresearch.com/" class=texta>D. E. Shaw Research</a>
-				</h4>
-				<ul class="cvlist">
-					<li>Developed machine learning workflows for drug discovery.</li>
-				</ul>
 				<h4 class="lralign cvitem">
 					Undergraduate Researcher,
 					<a href="https://tsaolab.berkeley.edu/" class=texta>
@@ -274,6 +268,15 @@
 					<li>Developed and benchmarked machine learning methods for translation initiation prediction.</li>
 				</ul>
 				<h4 class="lralign cvitem">
+					Undergraduate Senior Intern, Machine Learning Initiative
+					<span>Summer 2022</span>
+					<br>
+					<a href="https://www.deshawresearch.com/" class=texta>D. E. Shaw Research</a>
+				</h4>
+				<ul class="cvlist">
+					<li>Developed machine learning workflows for drug discovery.</li>
+				</ul>
+				<h4 class="lralign cvitem">
 					High School Research Intern,
 					<a href="https://fenglaboratory.org/" class=texta>
 						Feng Lab
@@ -288,25 +291,27 @@
 					<li>TRN Subnetworks <a href="https://doi.org/10.1038/s41586-020-2504-5" class="texta">Paper</a> in <em>Nature</em>.</li>
 				</ul>
 			</div>
+			</div>
 			
-			<h2 class="cvtitle">Teaching Positions</h2>
+			<div class="subcard">
+			<h2 class="cvtitle">Teaching Experience</h2>
 			<div class="indent">
 				<h4 class="lralign cvitem">
 					Undergraduate Graduate Student Instructor (uGSI)
 					<br>
-					Dept. of EECS, University of California, Berkeley
-					<span>Spring 2023, Fall 2022, Summer 2020</span>
+					<a href="https://eecs.berkeley.edu/" class=texta>Dept. of EECS</a>, <a href="https://www.berkeley.edu/" class="texta">University of California, Berkeley</a>
+					<span>Spring 2023, Fall 2022, Summer 2021</span>
 				</h4>
 				<ul class="cvlist">
-					<li>Course staff for <a href="https://www.su21.eecs70.org/" class="texta">COMPSCI 70</a> (Su 20), <a href="https://cs170.org/" class=texta>COMPSCI 170</a> (Fa 22), and <a href="https://people.eecs.berkeley.edu/~jrs/189/" class=texta>COMPSCI 189</a> (Sp 23).</li>
+					<li>Course staff for <a href="https://people.eecs.berkeley.edu/~jrs/189/" class=texta>COMPSCI 189</a> (Sp 23), <a href="https://cs170.org/" class=texta>COMPSCI 170</a> (Fa 22), and <a href="https://www.su21.eecs70.org/" class="texta">COMPSCI 70</a> (Su 21).</li>
 					<li>Taught discussion sections, led review sessions, answered questions on Piazza, graded exams, and held individual check-in meetings with students.</li>
-					<li>Received median 5/5 responses and above department average ratings on every question in Su 20 and Sp 23 course evaluations.</li>
+					<li>Received median 5/5 responses and above department average ratings on every question in Su 21 and Sp 23 course evaluations.</li>
 				</ul>
 				<h4 class="lralign cvitem">
 					Reader
 					<span>Fall 2022, Spring 2022, Spring 2021</span>
 					<br>
-					Dept. of EECS, University of California, Berkeley
+					<a href="https://eecs.berkeley.edu/" class=texta>Dept. of EECS</a>, <a href="https://www.berkeley.edu/" class="texta">University of California, Berkeley</a>
 				</h4>
 				<ul class="cvlist">
 					<li>Course staff for <a href="https://classes.berkeley.edu/content/2022-fall-compsci-172-001-lec-001" class=texta>COMPSCI 172</a> (Fa 22), <a href="https://classes.berkeley.edu/content/2022-fall-compsci-c176-001-lec-001" class=texta>COMPSCI C176</a> (Fa 22), <a href="https://cs170.org/" class="texta">COMPSCI 170</a> (Sp 22), <a href="https://www.eecs189.org/" class="texta">COMPSCI 189</a> (Sp 22), and <a href="https://www.sp21.eecs70.org/" class="texta">COMPSCI 70</a> (Sp 21).</li>
@@ -316,57 +321,55 @@
 					Reader
 					<span>Spring 2022</span>
 					<br>
-					Dept. of Mathematics, University of California, Berkeley
+					<a href="https://math.berkeley.edu/" class="texta">Dept. of Mathematics</a>, <a href="https://www.berkeley.edu/" class="texta">University of California, Berkeley</a>
 				</h4>
 				<ul class="cvlist">
-					<li>Reader for <a href="https://classes.berkeley.edu/content/2022-spring-math-185-001-lec-001" class="texta">MATH 185</a>.</li>
+					<li>Reader for <a href="https://classes.berkeley.edu/content/2022-spring-math-185-001-lec-001" class="texta">MATH 185</a> (Sp 22).</li>
 				</ul>
 			</div>
-			
+			</div>
+
+			<div class="subcard">
 			<h2 class="cvtitle">Selected Awards and Honors</h2>
 			<div class="indent">
 				<h4 class="lralign cvitem">
-					I.L. Chaikoff Memorial Award
+					<a href="https://mcb.berkeley.edu/undergrad/major/honors-program/awards#:~:text=I.L.%20Chaikoff,and%20Neurobiology%20emphases." class="texta">I.L. Chaikoff Memorial Award</a>
 					<span>May 2023</span>
 				</h4>
 				<ul class="cvlist">
 					<li>Department of Molecular and Cell Biology, University of California, Berkeley</li>
-					<li><a href="https://mcb.berkeley.edu/undergrad/major/honors-program/awards" class="texta">Description</a> from the MCB Department.</li>
 				</ul>
 				<h4 class="lralign cvitem">
-					CS Major Citation
+					<a href="https://www2.eecs.berkeley.edu/Students/Awards/114/" class="texta">CS Major Citation</a>
 					<span>May 2023</span>
 				</h4>
 				<ul class="cvlist">
 					<li>Department of Electrical Engineering and Computer Sciences, University of California, Berkeley</li>
-					<li><a href="https://www2.eecs.berkeley.edu/Students/Awards/114/" class="texta">Description</a> from the EECS Department.</li>
 				</ul>
 				<h4 class="lralign cvitem">
-					NSF Graduate Research Fellowship
+					<a href="https://www.nsfgrfp.org/" class="texta">NSF Graduate Research Fellowship</a>
 					<span>March 2023</span>
 				</h4>
 				<ul class="cvlist">
 					<li>National Science Foundation</li>
-					<li><a href="https://www.nsfgrfp.org/" class="texta">Description</a> from the Program.</li>
 				</ul>
 				<h4 class="lralign cvitem">
-					Dean's Honors List
-					<span>Fall 2022/2021/2020/2019, Spring 2022/2021</span>
+					<a href="https://lsadvising.berkeley.edu/policies/deans-listhonors" class="texta">Dean's Honors List</a>
+					<span>2019-2022</span>
 				</h4>
 				<ul class="cvlist">
 					<li>College of Letters and Science, University of California, Berkeley</li>
-					<li><a href="https://lsadvising.berkeley.edu/policies/deans-listhonors" class="texta">Description</a> from the College of Letters and Science.</li>
 				</ul>
 				<h4 class="lralign cvitem">
-					Regeneron Science Talent Search (STS) Scholar
+					<a href="https://www.societyforscience.org/blog/300-u-s-high-school-students-named-as-scholars-in-regeneron-science-talent-search-2019/" class="texta">Regeneron Science Talent Search (STS) Scholar</a>
 					<span>January 2019</span>
 				</h4>
 				<ul class="cvlist">
 					<li>Society for Science & the Public and Regeneron Pharmaceuticals</li>
-					<li><a href="https://www.societyforscience.org/blog/300-u-s-high-school-students-named-as-scholars-in-regeneron-science-talent-search-2019/" class="texta">Press release</a> from the Society for Science & the Public.</li>
 				</ul>
 			</div>
-		</div>
+			</div>
+		<!-- </div> -->
 	</div>
 </body>
 
